<resources>
    <string name="app_name">MembuatList</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="tLogin">SIGN-IN</string>
</resources>